# anime-game-cli

./: .gitmodules  Cargo.toml  README.md
src/: main.rs
src/commands/: help.rs  info.rs  mod.rs  patch.rs  run.rs
src/commands/game/: info.rs  mod.rs  repair.rs
src/commands/patch/: apply.rs  info.rs  mod.rs  revert.rs  sync.rs
src/commands/voice/: download.rs  info.rs  mod.rs  repair.rs
src/lib/: config.rs  mod.rs  output.rs
src/lib/command_traits/: mod.rs  repair.rs
