[package]
name = "anime-game-cli"
version = "0.1.0"
authors = ["Nikita Podvirnyy <suimin.tu.mu.ga.mi@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
edition = "2021"

[profile.release]
strip = true
lto = true
opt-level = 3

[dependencies]
anime-game-core = { path = "anime-game-core", features = ["all", "static", "genshin"] }
commandor = "0.1.0"
colorful = "0.2.1"
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
cli-table = "0.4.7"
linya = "0.3.0"
anyhow = "1.0"
